# PinkyBot

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/worktrees/agent-a4876bcb/: .mcp.json  LICENSE  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-beta.yml  ci-stable.yml  ci.yml  codeql.yml
docs/: autonomous-agents-spec.md  hybrid-memory-spec.md  mcp-servers.md  memory-system.md  multi-channel-spec.md  pinky-message-broker-spec.md  research-multi-session-agents.md  research-pipeline-spec.md  soul-guide.md  streaming-session-spec.md
docs/research/: hermes-and-marketing.md
docs/specs/: openclaw-migration.md  triggers.md
frontend/: agents.html  chat.html  dashboard.html  fleet.html  index.html  memories.html  settings.html  tasks.html
frontend-dist/: index.html
frontend-dist/assets/: index-32uwxhBt.js  index-5QoZv7Da.js  index-8511eHpY.js  index-A-XqqlXb.css  index-B6dRwloc.js  index-B7XsDSzM.css  index-B7lHt7jz.js  index-B8SvYaT1.js  index-B9BUXZOv.js  index-BAkV5Sfz.css  index-BDbK4tCa.css  index-BHzZ7Urw.css  index-BJiM-2le.css  index-BJwrdqOQ.css  index-BUGfm0gK.js  index-BUTkQDbI.js  index-BV4mGWxp.css  index-BVV_P8gw.css  index-BXLX9jLk.css  index-BXnmwEf_.js  index-BY4k6kp_.js  index-BYp8cQIP.js  index-B_-m6oaF.css  index-BbDrK0tg.js  index-Bc4_z3qp.js  index-BcN877D9.js  index-BdtJAm9b.css  index-BgrbrdtX.js  index-BhRTchN5.css  index-Bhcz1mY1.js  index-BkEGZCiE.js  index-BlTTQNpX.css  index-BnbvKYiK.js  index-BwiUVx-4.css  index-BxST6eGJ.js  index-ByH8K77c.js  index-C2qc9u4j.css  index-C6xMf4FQ.js  index-C8DrV36T.css  index-CAic1HWh.js  (+71 more)
frontend-svelte/: index.html  package-lock.json  package.json
frontend-svelte/scripts/: i18n-extract.js  i18n-translate.js
frontend-svelte/src/: App.svelte  app.css  main.js
frontend-svelte/src/components/: AgentSelector.svelte  AuthShell.svelte  Badge.svelte  ChatInput.svelte  ChatMessage.svelte  ChatSidebar.svelte  FormField.svelte  Layout.svelte  LocalePicker.svelte  Modal.svelte  ProviderConfig.svelte  SectionHeader.svelte  StatusBadge.svelte  TabBar.svelte  TimezoneSelect.svelte  Toast.svelte
frontend-svelte/src/lib/: api.js  chatUtils.js  i18n.js  soulTemplates.js  stores.js  theme.js  utils.js
scripts/: install-service.sh  restart.sh
scripts/launchctl/: com.pinkybot.daemon.plist
scripts/systemd/: pinkybot.service
skills/algorithmic-art/: SKILL.md
skills/brand-guidelines/: SKILL.md
skills/brand-presentation/: SKILL.md
skills/canvas-design/: SKILL.md
skills/claude-api/: SKILL.md
skills/design-md/: SKILL.md
skills/doc-coauthoring/: SKILL.md
skills/docx/: SKILL.md
skills/enhance-prompt/: SKILL.md
skills/frontend-design/: SKILL.md
skills/gogcli/: SKILL.md
skills/internal-comms/: SKILL.md
skills/mcp-builder/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md
skills/project-management/: SKILL.md
skills/react-components/: SKILL.md
skills/remotion/: SKILL.md
skills/shadcn-ui/: SKILL.md
skills/skill-creator/: SKILL.md
skills/slack-gif-creator/: SKILL.md
skills/stitch-design/: SKILL.md
skills/stitch-loop/: SKILL.md
skills/taste-design/: SKILL.md
skills/test-cleanup-99/: SKILL.md
skills/test-ping/: SKILL.md
skills/theme-factory/: SKILL.md
skills/web-artifacts-builder/: SKILL.md
skills/web-browsing/: SKILL.md
skills/webapp-testing/: SKILL.md
skills/xlsx/: SKILL.md
src/pinky_calendar/: __main__.py  oauth.py  server.py  store.py
src/pinky_cli/: __main__.py  connect.py  init.py  serve.py
src/pinky_daemon/: __main__.py  activity_store.py  agent_comms.py  agent_registry.py  analytics_store.py  api.py  app_store.py  auth.py  autonomy.py  broker.py  claude_runner.py  codex_session.py  content_scanner.py  conversation_store.py  daemon.py  dream_prompt.py  dream_runner.py  hooks.py  kb_store.py  librarian_prompt.py  librarian_runner.py  message_handler.py  outreach_config.py  plugin_manager.py  pollers.py  presentation_store.py  research_export.py  research_store.py  scheduler.py  sdk_runner.py  session_store.py  session_watchdog.py  sessions.py  shared_mcp.py  skill_loader.py  skill_store.py  soul_templates.py  streaming_session.py  task_store.py  trigger_store.py  (+5 more)
src/pinky_federation/: __init__.py  envelope.py  errors.py  fingerprint.py  key_store.py  keys.py  sealed_box.py  state.py  tofu.py
src/pinky_hub/: __main__.py  api.py  hub_store.py
src/pinky_memory/: __init__.py  __main__.py  embeddings.py  file_server.py  file_store.py  kg_extractor.py  server.py  store.py  types.py
src/pinky_messaging/: __main__.py  server.py
src/pinky_outreach/: __init__.py  __main__.py  discord.py  imessage.py  markdown_v2.py  server.py  slack.py  telegram.py  types.py  whatsapp.py
src/pinky_self/: __main__.py  server.py
src/pinky_web/: __init__.py  __main__.py  server.py
tests/: test_agent_comms.py  test_agent_registry.py  test_agent_status.py  test_analytics_store.py  test_api.py  test_app_store.py  test_apps_mcp_tools.py  test_auth.py  test_broker.py  test_calendar_server.py  test_codex_session.py  test_content_scanner.py  test_conversation_store.py  test_daemon.py  test_discord.py  test_dream_runner.py  test_file_store.py  test_hub.py  test_kb_store.py  test_kg_extractor.py  test_kg_phase2_store.py  test_markdown_v2.py  test_memory_server.py  test_memory_store.py  test_messaging_server.py  test_onboarding.py  test_outreach.py  test_outreach_config.py  test_outreach_server.py  test_pinky_messaging.py  test_pinky_self.py  test_pinky_self_tools.py  test_pinky_web.py  test_scheduler.py  test_sdk_runner.py  test_session_store.py  test_session_watchdog.py  test_shared_mcp.py  test_shared_mcp_integration.py  test_skill_store.py  (+7 more)
tests/pinky_federation/: test_envelope.py  test_fingerprint.py  test_key_store.py  test_keys.py  test_sealed_box.py  test_state.py  test_tofu.py
website/: index.html  package-lock.json  package.json  vite.config.js
website-api/: deploy.sh  main.py  nginx-snippet.conf  requirements.txt  setup-env.sh
website/src/: App.svelte  app.css
(+79 files in other folders)
