[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinky-ai"
version = "0.1.0"
description = "A personal AI companion framework powered by Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brad Brockman", email = "brad@brockmanlabs.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.27",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "numpy>=2.2",
    "openai>=2.30",
    "httpx>=0.28",
    "fastapi>=0.135",
    "uvicorn>=0.44",
    "claude-agent-sdk>=0.1.58",
    "Pillow>=10.0",
    # Federation crypto (sealed_box_v1): X25519, Ed25519, HKDF, XChaCha20-Poly1305.
    "cryptography>=41.0",
    "pynacl>=1.5",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot[webhooks]>=21.0"]
discord = ["discord.py>=2.3"]
slack = ["slack-sdk>=3.0"]
google = ["google-auth>=2.0", "google-api-python-client>=2.0"]
calendar = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "caldav>=1.3",
    "icalendar>=5.0",
    "cryptography>=41.0",
]
web = ["camoufox>=0.4", "markdownify>=1.0", "beautifulsoup4>=4.12"]
voice = ["twilio>=9.0", "anthropic>=0.40"]
local-embeddings = ["sentence-transformers>=2.0"]
all = [
    "pinky-ai[telegram,discord,slack,google,calendar,voice]",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.11",
]

[project.scripts]
pinky = "pinky_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pinky_memory", "src/pinky_outreach", "src/pinky_messaging", "src/pinky_daemon", "src/pinky_cli", "src/pinky_self", "src/pinky_calendar", "src/pinky_hub", "src/pinky_web", "src/pinky_federation"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# E501 (line-too-long) tracked as cleanup backlog — don't block CI on cosmetic length.
# Width is still enforced at 100 for formatters.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Mock classes in tests legitimately use PascalCase (e.g. `MockAdapter = ...`).
"tests/*" = ["N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
